force-app/main/default/objects/Case/fields/Contract_Help_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Help_Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract to Draft (No DocuSign)</fullName>
            </value>
            <value>
                <fullName>Contract to Draft + DocuSign</fullName>
            </value>
            <value>
                <fullName>Legal Redlines/Edits</fullName>
            </value>
            <value>
                <fullName>Initiate DocuSign</fullName>
            </value>
            <value>
                <fullName>Update DocuSign</fullName>
            </value>
            <value>
                <fullName>Docusign to Save</fullName>
            </value>
            <value>
                <fullName>Contract to Activate</fullName>
            </value>
            <value>
                <fullName>NDA to Review</fullName>
            </value>
            <value>
                <fullName>Partner Agreement</fullName>
            </value>
            <value>
                <fullName>Partner Agreement Redlines</fullName>
            </value>
            <value>
                <fullName>DPA/GDPR</fullName>
            </value>
            <value>
                <fullName>Sample Contract</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Correction</fullName>
            </value>
            <value>
                <fullName>Payment Form</fullName>
            </value>
            <value>
                <fullName>Customer Name Change</fullName>
            </value>
            <value>
                <fullName>Customer Request (Other)</fullName>
            </value>
            <value>
                <fullName>Remove DNC</fullName>
            </value>
            <value>
                <fullName>Price Increase Initiative</fullName>
            </value>
            <value>
                <fullName>Content: New</fullName>
            </value>
            <value>
                <fullName>Design: PowerPoint Slide(s) Design</fullName>
            </value>
            <value>
                <fullName>Content: Edit/Update</fullName>
            </value>
            <value>
                <fullName>Creative: New Art</fullName>
            </value>
            <value>
                <fullName>Design: Graphics Assistance</fullName>
            </value>
            <value>
                <fullName>Email: Outage/Upgrade Notification</fullName>
            </value>
            <value>
                <fullName>Email: Sales Insight/Marketo</fullName>
            </value>
            <value>
                <fullName>Email: Special Event/Offer</fullName>
            </value>
            <value>
                <fullName>Email: Other (See Description)</fullName>
            </value>
            <value>
                <fullName>PR/Communications: Information Needed</fullName>
            </value>
            <value>
                <fullName>PR/Communications: Review/Proofread Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>