force-app/main/default/objects/Case/fields/Contracting_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Complete_Date__c</fullName>
    <description>Contracting Complete Date used in SCON Onboarding cases</description>
    <label>Contracting Complete Date</label>
    <type>DateTime</type>
</CustomField>