force-app/main/default/objects/Case/fields/Contractor_Actual_Time_Spent_hrs__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Actual_Time_Spent_hrs__c</fullName>
    <inlineHelpText>This is the actual time spent working the case and is required for contractors to close a case</inlineHelpText>
    <label>Contractor Actual Time Spent (hrs)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>