force-app/main/default/objects/Case/fields/Contractor_Case_Accurate__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Case_Accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This case has been graded as accurate by CA/CH team</inlineHelpText>
    <label>Contractor Case Accurate</label>
    <type>Checkbox</type>
</CustomField>