force-app/main/default/objects/Case/fields/Contractor_Case_Accurate_Time_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Case_Accurate_Time_Date__c</fullName>
    <inlineHelpText>Gives us the time/date when this contractor case has been graded by CA/CH as accurate</inlineHelpText>
    <label>Contractor Case Accurate Time/Date</label>
    <type>DateTime</type>
</CustomField>