force-app/main/default/objects/Case/fields/Contractor_Case_Error__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Case_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Case needed to be Reopened and Reworked</inlineHelpText>
    <label>Contractor Case Error</label>
    <type>Checkbox</type>
</CustomField>