force-app/main/default/objects/Case/fields/Contractor_Case_Error_Date_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Case_Error_Date_Checkbox__c</fullName>
    <formula>NOT(ISBLANK( Contractor_Case_Error_Time_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is for reporting whether or not there was an error on the case (the contractor error checkbox is used to initiate automations which includes clearing itself when an error is reported)</inlineHelpText>
    <label>Contractor Case Error Date Checkbox</label>
    <type>Checkbox</type>
</CustomField>