force-app/main/default/objects/Case/fields/Contractor_Case_Error_Time_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Case_Error_Time_Date__c</fullName>
    <inlineHelpText>This is the time/date the CA/CH team marked this case as having a contractor error</inlineHelpText>
    <label>Contractor Case Error Time/Date</label>
    <type>DateTime</type>
</CustomField>