force-app/main/default/objects/Case/fields/Contractor_Estimate_or_Actual__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Estimate_or_Actual__c</fullName>
    <formula>IF( 
NOT(ISBLANK(Contractor_Actual_Time_Spent_hrs__c)) , Contractor_Actual_Time_Spent_hrs__c , Contractor_Time_Estimate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Combined Field for Weekly Time workload estimate</inlineHelpText>
    <label>Contractor Estimate or Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>