force-app/main/default/objects/Case/fields/Contractor_Hand_Off__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Hand_Off__c</fullName>
    <inlineHelpText>Date/Time of when CH/CA assigns ownership of case to a contractor</inlineHelpText>
    <label>Contractor Hand Off</label>
    <type>DateTime</type>
</CustomField>