force-app/main/default/objects/Case/fields/Contractor_Hand_Off_to_Closed__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Hand_Off_to_Closed__c</fullName>
    <formula>ClosedDate -  Contractor_Hand_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the time from case being handed off to contractor to the case being closed</inlineHelpText>
    <label>Contractor Hand Off to Closed</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>