force-app/main/default/objects/Case/fields/Contractor_Hand_Off_to_Contractor_User__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Hand_Off_to_Contractor_User__c</fullName>
    <formula>Contractor_Queue_to_Contractor_User__c - Contractor_Hand_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates time between when the case was handed off to a contractor queue and when it was actually assigned to a contractor user</inlineHelpText>
    <label>Contractor Hand Off to Contractor User</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>