force-app/main/default/objects/Case/fields/Contractor_Hand_Off_to_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Hand_Off_to_In_Progress__c</fullName>
    <formula>New_to_In_Progress__c -  Contractor_Hand_Off__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates time from Contractor Hand Off to when the Case is set to In progress</inlineHelpText>
    <label>Contractor Hand Off to In Progress</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>