force-app/main/default/objects/Case/fields/Contractor_Queue_to_Contractor_User__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Queue_to_Contractor_User__c</fullName>
    <inlineHelpText>This field populates when a contractor queue assigns case ownership to</inlineHelpText>
    <label>Contractor Queue to Contractor User</label>
    <type>DateTime</type>
</CustomField>