force-app/main/default/objects/Case/fields/Contractor_Time_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Time_Estimate__c</fullName>
    <inlineHelpText>Contractors initial Estimate of Case Completion Time. Note this field is in hours so half hour would be .5, 15 minutes would be .25 ect.</inlineHelpText>
    <label>Contractor Time Estimate (Hours)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>