force-app/main/default/objects/Case/fields/CPQ_Package_Licenses__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Package_Licenses__c</fullName>
    <inlineHelpText>All of Sales (except SDR/Inside Sales), Account Management, and any approvers</inlineHelpText>
    <label>CPQ Package Licenses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>