force-app/main/default/objects/Case/fields/CreatedByCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>CreatedByCurrentUser__c</fullName>
    <formula>$User.Id = CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByCurrentUser</label>
    <type>Checkbox</type>
</CustomField>