force-app/main/default/objects/Case/fields/Creation_to_Contractor_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Creation_to_Contractor_Handoff__c</fullName>
    <formula>Contractor_Hand_Off__c -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between Case Created and when the case was assigned to a contractor</inlineHelpText>
    <label>Creation to Contractor Handoff</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>