force-app/main/default/objects/Case/fields/CSA_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSA_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the original CSA who owns the support case.</inlineHelpText>
    <label>CSA Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>