force-app/main/default/objects/Case/fields/CSE_Account_Associate__c.field-meta.xml
<CustomField>
    <fullName>CSE_Account_Associate__c</fullName>
    <formula>Account.CSE_Account_Associate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Driven from account team member role</inlineHelpText>
    <label>CSE Account Associate</label>
    <type>Text</type>
</CustomField>