force-app/main/default/objects/Case/fields/Current_Channels__c.field-meta.xml
<CustomField>
    <fullName>Current_Channels__c</fullName>
    <label>Current Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Contract_Help_Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eBay</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Sears</fullName>
            </value>
            <value>
                <fullName>Walmart</fullName>
            </value>
            <value>
                <fullName>Jet</fullName>
            </value>
            <value>
                <fullName>Rakuten</fullName>
            </value>
            <value>
                <fullName>New Egg</fullName>
            </value>
            <value>
                <fullName>Cdiscount</fullName>
            </value>
            <value>
                <fullName>LaRedoute</fullName>
            </value>
            <value>
                <fullName>Tesco</fullName>
            </value>
            <value>
                <fullName>Mercado Libre</fullName>
            </value>
            <value>
                <fullName>TradeMe</fullName>
            </value>
            <value>
                <fullName>OneStopPlus</fullName>
            </value>
            <value>
                <fullName>Zalando DE</fullName>
            </value>
            <value>
                <fullName>Zalando FR</fullName>
            </value>
            <value>
                <fullName>AllYouNeed</fullName>
            </value>
            <value>
                <fullName>Google Shopping</fullName>
            </value>
            <value>
                <fullName>Bing Shopping</fullName>
            </value>
            <value>
                <fullName>Other CSEs</fullName>
            </value>
            <value>
                <fullName>Flex Feeds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overstock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>