force-app/main/default/objects/Case/fields/Current_Digital_Marketing_Channels__c.field-meta.xml
<CustomField>
    <fullName>Current_Digital_Marketing_Channels__c</fullName>
    <label>Current Digital Marketing Channels?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Search (Google, Yahoo!, Bing)</fullName>
            </value>
            <value>
                <fullName>Product Listing Ads (Google Shopping)</fullName>
            </value>
            <value>
                <fullName>Search Engine Optimization (SEO)</fullName>
            </value>
            <value>
                <fullName>Shopping Feeds</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Display/Affiliates/Retargeting</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>