force-app/main/default/objects/Case/fields/Current_Prioirity_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Prioirity_Number__c</fullName>
    <label>Current Prioirity Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>