force-app/main/default/objects/Case/fields/Customer_Care_Line__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Care Line</label>
    <type>Checkbox</type>
</CustomField>