force-app/main/default/objects/Case/fields/Customer_details__c.field-meta.xml
<CustomField>
    <fullName>Customer_details__c</fullName>
    <formula>&quot;Customer: &quot; &amp; Account.Name &amp; &quot;, Contact: &quot; &amp; Contact_First_Name__c &amp; &quot; &quot; &amp;  Contact_Last_Name__c &amp; &quot; (&quot; &amp; Contact_Email__c &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer details</label>
    <type>Text</type>
</CustomField>