force-app/main/default/objects/Case/fields/Customer_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Rating__c</fullName>
    <label>Customer Satisfaction Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral/No Feedback</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>