force-app/main/default/objects/Case/fields/Dashboard_Created__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Created__c</fullName>
    <inlineHelpText>All of Sales except managers, Strategic Team, and LDRs</inlineHelpText>
    <label>Dashboard Created</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>