force-app/main/default/objects/Case/fields/Dashboard_Reports_Archived__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Reports_Archived__c</fullName>
    <inlineHelpText>All of Sales, Acct Mgmt</inlineHelpText>
    <label>Dashboard Reports Archived</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>