force-app/main/default/objects/Case/fields/Data_com_License__c.field-meta.xml
<CustomField>
    <fullName>Data_com_License__c</fullName>
    <inlineHelpText>All of Sales except managers = 300, AM and Sales managers = 25</inlineHelpText>
    <label>Data.com License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>