force-app/main/default/objects/Case/fields/Data_Type_DSCO__c.field-meta.xml
<CustomField>
    <fullName>Data_Type_DSCO__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Delimited/Flat file</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>