force-app/main/default/objects/Case/fields/Date_CSM_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Date_CSM_Escalation__c</fullName>
    <description>Date field for CSM Escalation</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>