force-app/main/default/objects/Case/fields/Date_First_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Closed__c</fullName>
    <description>Date when case is first closed.</description>
    <inlineHelpText>Date when the case is first closed.</inlineHelpText>
    <label>Date First Closed</label>
    <type>Date</type>
</CustomField>