force-app/main/default/objects/Case/fields/Date_of_status_not_equal_to_close__c.field-meta.xml
<CustomField>
    <fullName>Date_of_status_not_equal_to_close__c</fullName>
    <label>Date of status not equal to close</label>
    <type>DateTime</type>
</CustomField>