force-app/main/default/objects/Case/fields/Date_Reopened__c.field-meta.xml
<CustomField>
    <fullName>Date_Reopened__c</fullName>
    <description>Date case is reopened</description>
    <label>Date Reopened</label>
    <type>Date</type>
</CustomField>