force-app/main/default/objects/Case/fields/Date_Status_is_New__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_is_New__c</fullName>
    <label>Date Status is New</label>
    <type>DateTime</type>
</CustomField>