force-app/main/default/objects/Case/fields/Date_Time_Originated__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Originated__c</fullName>
    <description>The date and time the case was originally created, regradless of when it got into salesforce.com.</description>
    <label>Date/Time Originated</label>
    <type>DateTime</type>
</CustomField>