force-app/main/default/objects/Case/fields/Days_in_New_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_New_Status__c</fullName>
    <formula>Date_Status_is_New__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in New Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>