force-app/main/default/objects/Case/fields/Days_since_Last_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Last_Case_Comment__c</fullName>
    <formula>if(IsClosed = False, today()- DATEVALUE(Last_Case_Comment_Date_Time__c),    DATEVALUE(ClosedDate)- DATEVALUE(Last_Case_Comment_Date_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Last Case Comment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>