force-app/main/default/objects/Case/fields/Defect_Number__c.field-meta.xml
<CustomField>
    <fullName>Defect_Number__c</fullName>
    <description>Captures the Defect Number of the issue</description>
    <label>Defect Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>