force-app/main/default/objects/Case/fields/Delete_Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Delete_Survey_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Survey Response</label>
    <type>Checkbox</type>
</CustomField>