force-app/main/default/objects/Case/fields/Desired_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Desired_Resolution__c</fullName>
    <description>For finance cases.</description>
    <label>Desired Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>