force-app/main/default/objects/Case/fields/Developer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Developer_Hours__c</fullName>
    <label>Developer Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>