force-app/main/default/objects/Case/fields/Disposition_Classification__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Classification__c</fullName>
    <label>Disposition - Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account - Combining Account Access</fullName>
            </value>
            <value>
                <fullName>Account - Connection/Termination with Trading Partner</fullName>
            </value>
            <value>
                <fullName>Account - Email/Notification Questions</fullName>
            </value>
            <value>
                <fullName>Account - General Questions</fullName>
            </value>
            <value>
                <fullName>Account - User Access</fullName>
            </value>
            <value>
                <fullName>API - Documentation Question</fullName>
            </value>
            <value>
                <fullName>API - General Question</fullName>
            </value>
            <value>
                <fullName>API - Streams Issue</fullName>
            </value>
            <value>
                <fullName>API - Token Request</fullName>
            </value>
            <value>
                <fullName>API - Unknown System Errors</fullName>
            </value>
            <value>
                <fullName>API - V3 API Migration</fullName>
            </value>
            <value>
                <fullName>AS2 - Connection Failure</fullName>
            </value>
            <value>
                <fullName>AS2 - Connection Setup</fullName>
            </value>
            <value>
                <fullName>AS2 - Connection Update</fullName>
            </value>
            <value>
                <fullName>AS2 - Dsco Cert Update</fullName>
            </value>
            <value>
                <fullName>AS2 - Pulse Migration</fullName>
            </value>
            <value>
                <fullName>AS2 - Supplier Certificate Update</fullName>
            </value>
            <value>
                <fullName>Automation - Job Configuration</fullName>
            </value>
            <value>
                <fullName>Automation - Job Failure</fullName>
            </value>
            <value>
                <fullName>Automation - Request to Resend Data</fullName>
            </value>
            <value>
                <fullName>Automation - Retailer Cancel Export Missing</fullName>
            </value>
            <value>
                <fullName>Automation - Retailer Inventory Export Missing</fullName>
            </value>
            <value>
                <fullName>Automation - Retailer Invoice Export Missing</fullName>
            </value>
            <value>
                <fullName>Automation - Retailer Shipment Export Missing</fullName>
            </value>
            <value>
                <fullName>Cancel - Cancel Update Missing</fullName>
            </value>
            <value>
                <fullName>Cancel - Error When Cancelling</fullName>
            </value>
            <value>
                <fullName>Cancel - General Questions</fullName>
            </value>
            <value>
                <fullName>Cancel - How To Cancel</fullName>
            </value>
            <value>
                <fullName>Cancel - Order Mistakenly Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancel - Request to Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>