force-app/main/default/objects/Case/fields/Disposition_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Integration_Type__c</fullName>
    <label>Disposition - Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>AS2</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>SFTP - EDI</fullName>
            </value>
            <value>
                <fullName>SFTP - Flat-file</fullName>
            </value>
            <value>
                <fullName>Third-Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>