force-app/main/default/objects/Case/fields/Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Status__c</fullName>
    <label>Disposition - Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>