force-app/main/default/objects/Case/fields/Distribute_Bucket_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Bucket_of_Accounts__c</fullName>
    <inlineHelpText>All of Sales</inlineHelpText>
    <label>Distribute Bucket of Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>