force-app/main/default/objects/Case/fields/Do_not_send_Closed_Case_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_Closed_Case_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you do NOT want to send the &quot;Closed Case&quot; email for Contract Help cases</inlineHelpText>
    <label>Do not send Closed Case Email</label>
    <type>Checkbox</type>
</CustomField>