force-app/main/default/objects/Case/fields/Do_they_have_UPCs__c.field-meta.xml
<CustomField>
    <fullName>Do_they_have_UPCs__c</fullName>
    <description>Field captures whether the customer uses UPCs.</description>
    <inlineHelpText>Field captures whether the customer uses UPCs.</inlineHelpText>
    <label>Do they have UPCs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>