force-app/main/default/objects/Case/fields/Documentation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Needed__c</fullName>
    <label>Documentation Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Business Users</fullName>
            </value>
            <value>
                <fullName>Yes - Sys Admins</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>