force-app/main/default/objects/Case/fields/DocuSign_Recipient_Link__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Recipient_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field from the case to the Docusign Recipient Status record showing the customer has signed.</description>
    <label>DocuSign Recipient Link</label>
    <referenceTo>dsfs__DocuSign_Recipient_Status__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>