force-app/main/default/objects/Case/fields/Docusign_Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Signatory_Email__c</fullName>
    <description>Requested by Legal, Rebecca Pope, in Case Number 02316245. Included in flow &quot;Request Contract Help Button&quot;. It is required when the Request Type is &quot;Please send agreement through DocuSign&quot;</description>
    <inlineHelpText>Please enter the name of the Signatory for the DocuSign request</inlineHelpText>
    <label>Docusign Signatory Email</label>
    <type>Email</type>
</CustomField>