force-app/main/default/objects/Case/fields/DocuSign_Status_Envelope_Link__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status_Envelope_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status Envelope Link</label>
    <referenceTo>dsfs__DocuSign_Status__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>